# android-ota-extractor

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: extract.rs  inspect.rs  main.rs  update_metadata.proto
src/extract/: bspatch.rs  extent.rs
test/: patch
